--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/press-start-2p": "^5.0.18",
+    "@wavesurfer/react": "^1.0.4",
+    "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reset-css": "^5.0.2"
+    "react-router-dom": "^6.22.1",
+    "reset-css": "^5.0.2",
+    "wavesurfer.js": "^7.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
